# mlbe

./: .dockerignore  BENTOML_SETUP.md  DOCKER_SETUP.md  Dockerfile  bentofile.yaml  docker-compose.yml  main.py  pyproject.toml  service.py  test_predict.json  transformers.py
Notebooks/: Capstone_Project_Model1.ipynb  Capstone_Project_Model2.ipynb
bentoml/: bentoml_configuration.yaml  save_models.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: catboost_model.cbm  model_lead_scoring_final_deployment.joblib
